[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Ian Guy"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = {version = "1", features = ["derive"]}
chrono = "0.4.15"
uuid = { version = "1", features = ["v4"] }
config = "0.13"

[dependencies.sqlx]
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"